--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 <script>
 	$(document).ready(function(){
 		$('button').click(function(){
-			const name=$('#nameid').val();
-			alert(name);
+			const no=$('#nameid').val();
+			//alert(no);
 			$('.imageid').attr('src',`https://joeschmoe.io/api/v1/${name}`);
-			const b = $('.imageid');
-   			console.log(b);
+			const box = $('.imageid');
+   			console.log(box);
 		});
 	});
 </script>
