--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		$('button').click(function(){
 			const no=$('#nameid').val();
 			//alert(no);
-			$('.imageid').attr('src',`https://joeschmoe.io/api/v1/${name}`);
+			$('.imageid').attr('src',`https://joeschmoe.io/api/v1/${no}`);
 			const box = $('.imageid');
    			console.log(box);
 		});
